--- a/kujundus.css
+++ b/kujundus.css
@@ -1,5 +1,30 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+===========================================================
+/*css reset*/
+
 body {
     background-color: black;
+    height: 100%;
 }
 
 .tekst {
@@ -18,7 +43,6 @@ body {
     outline-offset: 10px;
 }
 
-
 .tillu {
     color: rgb(116, 143, 117);
     font: courier;
@@ -28,6 +52,7 @@ body {
     overflow: hidden;
     border: 5px solid rgb(32, 38, 90);
     background-color: black;
+    
 }
 
 .tab button {
@@ -54,9 +79,34 @@ body {
 .tabcontent {
     display: none;
     color: rgb(204, 122, 8);
+    background-color: black;
+    padding: 20px;
+    
 }
 
 .salajanetabcontent {
     display: none;
     color: black;
+}
+
+.sisu {
+    z-index: -1;
+    background-image: url("taust.jpg");
+    background-size: cover;
+    min-height: 100%;
+    min-width: 1024px;
+    text-align: center;     
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+
+.sisu_tekst {
+    color: white;
+    font-size: 10vh;
+    margin-top: 15%;
+    text-shadow: 0px 0px 15px #c2e2ff;
 }
