--- a/kujundus.css
+++ b/kujundus.css
@@ -19,40 +19,24 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-===========================================================
 /*css reset*/
 
-body {
-    background-color: black;
-    height: 100%;
-}
+
 
 .tekst {
-    color: rgb(204, 122, 8);
+    color: rgb(250, 235, 215);
     text-align: center;
-}
-
-.pilt {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 200px;
-    height: 200px;
-    outline: solid 5px rgb(32, 38, 90);
-    outline-offset: 10px;
-}
-
-.tillu {
-    color: rgb(116, 143, 117);
-    font: courier;
+    font-size: 5vh;
+    text-shadow: 0px 0px 15px #c2e2ff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
 }
 
 .tab {
     overflow: hidden;
-    border: 5px solid rgb(32, 38, 90);
-    background-color: black;
-    
+    border: 5px solid rgb(250, 235, 215, 0.4);
+    background-color: transparent; 
+    width: 99%
 }
 
 .tab button {
@@ -63,30 +47,31 @@ body {
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    color: rgb(116, 143, 117);
+    color: rgb(250, 235, 215);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 3vh;
+    width: 33.33%
 }
 
 .tab button:hover {
-    background-color: rgb(224, 104, 93);
+    background-color: rgb(250, 235, 215);
     color: black;
 }
 
 .tab button.active {
-    background-color: rgb(32, 38, 90);
-    color: rgb(204, 122, 8);
+    background-color: rgb(250, 235, 215, 0.4);
+    color: rgb(black);
 }
 
 .tabcontent {
     display: none;
-    color: rgb(204, 122, 8);
-    background-color: black;
+    background-color: transparent;
     padding: 20px;
-    
-}
-
-.salajanetabcontent {
-    display: none;
-    color: black;
+    color: rgb(250, 235, 215);
+    font-size: 5vh;
+    text-shadow: 0px 0px 15px #c2e2ff;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .sisu {
@@ -105,8 +90,14 @@ body {
   }
 
 .sisu_tekst {
-    color: white;
+    color: rgb(250, 235, 215);
     font-size: 10vh;
-    margin-top: 15%;
+    margin-top: 20%;
     text-shadow: 0px 0px 15px #c2e2ff;
+}
+
+a {
+    color: rgb(250, 235, 215); 
+    background-color: transparent; 
+    text-decoration: none;
 }
